# askdex-agent

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt
app/: config.py  main.py
app/api/routes/: README.md  chat.py  conversation.py  document.py  evaluation.py  health.py  kg.py  trace.py
app/core/: wiring.py
app/core/agent/: README.md  orchestrator.py  planner.py  react_agent.py
app/core/documents/: service.py
app/core/evaluation/: README.md  __init__.py  llm_judge.py  metrics.py  ragas_metrics.py  reporter.py  runner.py  service.py  testset.py
app/core/intent/: README.md  recognizer.py
app/core/kg/: README.md  __init__.py  builder.py  enrich.py  extractor.py  repository.py  retriever.py  service.py
app/core/memory/: README.md  manager.py  short_term.py
app/core/rag/: README.md
app/core/retrieval/: README.md  __init__.py  pipeline.py  query_enhancer.py  query_rewriter.py  reranker.py  service.py
app/core/tools/: README.md  registry.py
app/etl/: README.md
app/infrastructure/: README.md
app/infrastructure/database/: models.py
app/infrastructure/observability/: __init__.py  otel.py
app/infrastructure/trace/: redis_trace_store.py
app/infrastructure/vectordb/: milvus_client.py
app/models/: schemas.py
docs/: agent-improvement-todo.md  id-schema.md
eval_reports/: ragas_report_demo.json  ragas_report_demo.md  ragas_report_fixed.json  ragas_report_fixed.md  testset_demo.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  api.ts  router.ts  style.css
frontend/src/views/: ChatView.vue  HistoryView.vue  KnowledgeView.vue  MonitorView.vue  SettingsView.vue
scripts/: debug_​​霹雳迪迪.json  generate_qa.py  sample_test.py  scrape_bwiki.py  scrape_bwiki_v2.py  scrape_bwiki_v3.py  scrape_combined.py  scrape_roco.py  scrape_smw_final.py  test_one.py
tests/: README.md  conftest.py
tests/test_core/: test_circuit_breaker.py  test_orchestrator.py  test_planner.py  test_react_agent.py  test_reflection.py
tests/test_etl/: test_chunker.py  test_parser.py  test_pipeline.py
tests/test_infrastructure/: test_session.py  test_tracer.py
tests/test_intent/: test_intent_recognizer.py
tests/test_tools/: test_calculator.py  test_tool_registry.py  test_tool_router.py
(+2 files in other folders)
